<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Tänne kirjoitetaan englanninkieliset tekstit, koska jos laitteen kieltä ei löydy käännöksistä, tämän tiedoston tekstit näkyvät ruudulla. \n -merkki tarkoittaa uutta riviä, pelkkä enter napin painallus ei toimi. -->

    <string name="app_name">Alanurmon Koulu</string>
    <string name="action_nettisivut">Web Page</string>
    <string name="etusivu_teksti">
        LASKETTELUPÄIVÄ LAUANTAINA, 14.3\n
        28.1.2015
        \n\n

        Vaikka talvi tuntuu uhkaavasti kääntyvän kohti kevättä, uskotaan silti vahvasti Simpsiön lumen riittävyyteen menemällä laskettelemaan maaliskuun puolessa välissä.
        Laskettelupäivä korvaa loppiaista ennen olleen koulupäivän ja on siis normaali koulupäivä.
        Kuljetukset Simpsiölle hoituvat perinteiseen tyyliin omatoimisesti, eväät tulevat koululta. Tarkempi tiedote koteihin maaliskuun ensimmäisellä viikolla.
        \n\n


        TULOSTUSTA MALLIA 3D\n
        15.1.2015\n\n

        Tuskin oli kevätlukukausi päässyt pyörähtämään kunnolla käyntiin, kun 3D -tulostin sylkäisi ensimmäiset tuotoksensa maailmalle. Hienosäätöjen jälkeen päästään kohta toteuttamaan monen oppilaan omaa suunnitelmaa toimivasta pelinappulasta ja tiedä mitä muuta vielä tulostetaankaan.\n\n

        Kadonnut hyllynpidike on jo tehty ja hyvin toimii, tulostetut nopat pyörivät odotetusti ja suuria suunnitelmia jatkolle on olemassa. Kiitokset Chrisille jo tässä vaiheessa!

        \n\n</string>
    <string name="etusivu_teksti2">HYVÄÄ JOULUA!\n
        20.12.2014\n\n

        Työntäyteinen syksy on takana ja on aika hengähtää hetkisen. Kiitokset kaikille eri tavoin koulun toimintaan osallistuneille tahoille yhdessä ja erikseen!\n\n

        Joulukalenterin luukut avautuvat jouluaattoon asti ja jo nyt voitaneen sanoa uuden perinteen syntyneen. Ensi vuonna siis jatketaan joulukalenterin luukkujen availua koulun kotisivujen kautta.\n\n

        Ylimääräisenä bonuksena julkaistaan yksi bonusluukku jouluaattona. Linkki luukkuun löytyy alla olevasta napista.</string>
    <string name="bonusluukku_nappi">Bonusluukku</string>
    <string name="etusivu_teksti3">JOULUJUHLASSA ENNÄTYSYLEISÖ\n
        19.12.2014\n\n

        Torstain joulujuhla aiheutti pienimuotoisen tungoksen koulun parkkipaikalla, kun reilu kaksisataa vierasta tuli seuraamaan oppilaiden esittämiä ohjelmia. Joulukalenterin luukulla 18 alkaneen ja volttinäytökseen päättyneen juhlan jälkeen sekä esiintyjät että yleisö vaikuttivat varsin tyytyväisiltä. Eikä syyttä.\n\n

        Välitodistusten jaon jälkeen keskitytään joulun viettoon ja koulutyöhön palataan loppiaisen jälkeen 7.1.2015.

        \n\n</string>
    <string name="title_activity_ohjeita">Instructions</string>
    <string name="lista_3d_tulostin">How to use a 3D printer?</string>
    <string name="lista_tinkercad">How to use Tinkercad?</string>
    <string name="avaa_fullscreen_teksti">Open in fullscreen</string>
    <string name="ohjeita_nappi">Instructions</string>
    <string name="action_settings">Settings</string>
    <string name="tulostus_ohje_teksti">Using MiniFactory 3D printer\n\nIf for example, you have created a character for a boardgame,  and you want to print it, do the following:\nFirst download it on to your computer:</string>
    <string name="tulostus_ohje_teksti2">With Tinkercad you can download a piece by clicking on the \"Download for 3D Printing\" -button:</string>
    <string name="tulostus_ohje_teksti3">When the download is complete, click on it:</string>
    <string name="tulostus_ohje_teksti4">After clicking, The starting screen of Netfabb Studio will be opened. Click on the small box to the left from the \"I accept the terms of usage\" text:</string>
    <string name="tulostus_ohje_teksti5">Then click on the \"Later\" -button to open the program:</string>
    <string name="tulostus_ohje_teksti6">This is what Netfabb Studio looks like:</string>
    <string name="tulostus_ohje_teksti7">At the left side of the screen, you can see the 3D model of the piece, and at the right side are some settings an tweaks that can be used on the piece.</string>
    <string name="tinkercad_ohje_teksti">Tinkercad instruction coming soon!</string>
    <string name="title_activity_tulostus_ohje_kappaleet">Chapters</string>
    <string name="kappale_teksti">Choose chapter below</string>
    <string name="tulostus_kappale1">1: Downloading the item on to the computer</string>
    <string name="tulostus_kappale2">2: Netfabb Studio - Opening</string>
    <string name="tulostus_kappale3">3: Netfabb Studio - Repairing</string>
    <string name="tulostus_kappale4">4: Netfabb Studio - Applying</string>
    <string name="tulostus_kappale5">5: Netfabb Studio - Exporting and Saving</string>
    <string name="tulostus_kappale6">6: Repetier Host - Opening and Loading</string>
    <string name="tulostus_kappale7">7: Repetier Host - Slic3r</string>
    <string name="tulostus_kappale8">8: Repetier Host - Beginning printing and finishing</string>
    <string name="title_activity_tulostus_ohje_kappale2">Printing instruction - Chapter 2</string>
    <string name="title_activity_tulostus_ohje_kappale1">Printing instruction - Chapter 1</string>
    <string name="seuraava_kappale_nappi_teksti">Open next Chapter</string>
    <string name="title_activity_tulostus_ohje_kappale3">Printing instruction - Chapter 3</string>
    <string name="tulostus_ohje_teksti8">To begin repairing the piece, click on the red Repair button in the top right part of the screen:</string>
    <string name="tulostus_ohje_teksti9">After thet, click on the Actions button a little below the Repair button.</string>
    <string name="tulostus_ohje_teksti10">Next  click on all of the buttons that have been circled in the picture below. Two of the buttons will open a window, and all you need to do, is click on the \"OK\" -button:</string>
    <string name="title_activity_tulostus_ohje_kappale4">Printing instruction - Chapter 4</string>
    <string name="tulostus_ohje_teksti11">Now click the Apply repair -button at the bottom right ot the screen:</string>
    <string name="tulostus_ohje_teksti12">After that, a window will open, asking what you want to do with the piece that you just repaired. Just click on \"Keep old part\":</string>
    <string name="tulostus_ohje_teksti13">To the right side of the window, appears a new piece, that has a text after it\'s name, that says \"(repaired)\":</string>
    <string name="tulostus_ohje_teksti14">Then right click on the new piece, and a following menu will be opened:</string>
    <string name="tulostus_ohje_teksti15">Hover your mouse over the Export part option, and select \"as STL\":</string>
    <string name="tulostus_ohje_teksti16">After this, a window will be opened that lets you choose, where, and with what name you want to save the piece. Click on the \"Tallenna\" -button:</string>
    <string name="tulostus_ohje_teksti17">After the piece has been saved, you can close Netfabb Studio by clicking on the cross in the top right corner:</string>
    <string name="title_activity_tulostus_ohje_kappale5">Printing instruction - Chapter 5</string>
    <string name="tulostus_ohje_teksti18">Hover your mouse over the Export part option, and select \"as STL\":</string>
    <string name="edellinen_kappale_nappi">Open previous chapter</string>
    <string name="title_activity_tulostus_ohje_kappale6">Printing instruction - Chapter 6</string>
    <string name="tulostus_ohje_teksti19">Open Repetier Host by clicking the button at the bottom of the screen:</string>
    <string name="tulostus_ohje_teksti20">This is what Repetier Host looks like. At the left,  the printing surface is dispayed, and at the right, information on the printing and printer.</string>
    <string name="tulostus_ohje_teksti21">Next click on the \"Lataa\" -button in the top left corner of the screen:</string>
    <string name="tulostus_ohje_teksti22">Now select the printable part and then click on the \"Avaa\" -button:</string>
    <string name="title_activity_tulostus_ohje_kappale7">Printing instruction - Chapter 7</string>
    <string name="tulostus_ohje_teksti23">When you have selected your piece, it will be opened and displayed on the printing surface at the left side of the screen:</string>
    <string name="tulostus_ohje_teksti24">Next the piece has to be converted in to G-code, so that the printer can understand what it should do. For that, there is an extra program, Slic3r, that can be found integrated in to Repetier Host. To open Slic3r, click on the Slicer button at the top right side of the screen:</string>
    <string name="tulostus_ohje_teksti25">When Slic3r has been opened, you can click on the \"Viipaloi Slic3r\" -button, and Slic3r will convert the piece in to G-code</string>
    <string name="title_activity_tulostus_ohje_kappale8">Printing instruction - Chapter 8</string>
    <string name="tulostus_ohje_teksti26">Click on \"Aja Työ\" -button to start printing:</string>
    <string name="tulostus_ohje_teksti27">Next the printer will warm up the printing surface, and the extruder, and will then begin the printing. In the picture below, the printing has just started.</string>
    <string name="tulostus_ohje_teksti28">When the printing has finished the printer will lift the extruder up, and bring the piece forward, where it is then easy to remove of the surface.</string>
    <string name="kahoot_nappi">Kahoot!</string>
    <string name="action_tulostinongelmat">Problems with printer/printing?</string>

    <string-array name="tabs">

        <item>How to 3D print</item>
        <item>Tinkercad</item>

    </string-array>
    <string name="title_activity_tulostus_ongelmat">Printer/Printing problems?</string>
    <string name="tulostus_ongelma_valitse_vaihtoehto_teksti">What kind of problem have you experienced?\nPlease select an option below:</string>
    <string name="joku_muu_nappi">Something else</string>
    <string name="tulostin_ei_aloita_nappi">Printer doesn\'t start printing</string>
    <string name="tulostin_repetier_host_yhteys_poikki_nappi">RepetierHost can\'t connect to the printer</string>
    <string name="title_activity_tulostin_ei_aloita_tulostusta">Printer doesn\'t start printing</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_repetier_host_yhteys_poikki">RepetierHost no connection</string>
    <string name="title_activity_joku_muu_ongelma">Some other problem</string>
    <string name="millainen_ongelma_edit_text_hint">What kind of problem have you experienced?</string>
    <string name="valitse_lahetystapa_alapuolelta_teksti">Select below how you want to contact:</string>
    <string name="sposti_nappi">Email</string>
    <string name="tekstiviesti_nappi">Text message</string>
    <string name="puhelu_vaihtoehto_nappi">Optionally, you can also make a phone call to get help</string>
    <string name="puhelu_nappi">Phone call</string>
    <string name="paina_nappia_lähettääksesi">Tap the button below to send the message:</string>
    <string name="lähetä">Send</string>
    <string name="tulostus_ongelmia_sposti_aihe">Printer/Printing problems</string>
    <string name="tyhja_viesti">Please type your message first!</string>
    <string name="viesti_lahetetty">Message has been sent!</string>


</resources>
