<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fi.alanurmonkoulu.alanurmonkoulu.JokuMuuOngelma">

    <include
        layout="@layout/custom_toolbar"
        android:id="@+id/customToolbar"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/kirjoitettuOngelmaViesti"
        android:layout_below="@+id/customToolbar"
        android:layout_centerHorizontal="true"
        android:hint="@string/millainen_ongelma_edit_text_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kirjoitettuOngelmaViesti"
        android:text="@string/paina_nappia_lähettääksesi"
        android:id="@+id/textView12"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lähetä"
        android:id="@+id/emailNappi"
        android:layout_below="@+id/textView12"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tekstiviesti_nappi"
        android:id="@+id/tekstiViestiNAppi"
        android:layout_below="@+id/emailNappi"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puhelu_vaihtoehto_nappi"
        android:id="@+id/textView13"
        android:layout_below="@+id/tekstiViestiNAppi"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/puhelu_nappi"
        android:id="@+id/puheluNappi"
        android:layout_below="@+id/textView13"
        android:visibility="invisible"/>

</RelativeLayout>
