<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fi.alanurmonkoulu.alanurmonkoulu.TulostusOhjeKappale2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/kappale2Layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tulostus_ohje_teksti3"
                        android:id="@+id/textView5"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView4"
                        android:layout_below="@+id/textView5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/lataus_chromessa"
                        android:adjustViewBounds="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tulostus_ohje_teksti4"
                        android:id="@+id/textView6"
                        android:layout_below="@+id/imageView4"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3"
                        android:layout_below="@+id/textView6"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/netfabb_avaus"
                        android:adjustViewBounds="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tulostus_ohje_teksti5"
                        android:id="@+id/textView7"
                        android:layout_below="@+id/imageView3"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView5"
                        android:layout_below="@+id/textView7"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/netfabb_avaus2"
                        android:adjustViewBounds="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tulostus_ohje_teksti6"
                        android:id="@+id/textView8"
                        android:layout_below="@+id/imageView5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView6"
                        android:layout_below="@+id/textView8"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/netfabb_avattu"
                        android:adjustViewBounds="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tulostus_ohje_teksti7"
                        android:id="@+id/textView9"
                        android:layout_below="@+id/imageView6"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:paddingBottom="50dp"/>

                </RelativeLayout>
        </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edellinenKappaleNappi"
            android:text="@string/edellinen_kappale_nappi"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seuraavaKappaleNappi"
            android:text="@string/seuraava_kappale_nappi_teksti"
            android:layout_weight="1"/>

    </LinearLayout>
</RelativeLayout>
