<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fi.alanurmonkoulu.alanurmonkoulu.TulostusOhjeKappale3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"

                android:id="@+id/tulostusOhjeTeksti10"
                android:text="@string/tulostus_ohje_teksti8"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"

                android:src="@drawable/netfabb_repair_nappi"
                android:id="@+id/imageView"
                android:layout_below="@+id/tulostusOhjeTeksti10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:text="@string/tulostus_ohje_teksti9"
                android:id="@+id/textView4"
                android:layout_below="@+id/imageView"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"

                android:src="@drawable/netfabb_actions_nappi"
                android:id="@+id/imageView2"
                android:layout_below="@+id/textView4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:text="@string/tulostus_ohje_teksti10"
                android:id="@+id/textView5"
                android:layout_below="@+id/imageView2"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"

                android:src="@drawable/netfabb_painettavat_napit"
                android:id="@+id/imageView3"
                android:layout_below="@+id/textView5"
                android:paddingBottom="50dp"/>

            </RelativeLayout>

        </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edellinenKappaleNappi"
            android:text="@string/edellinen_kappale_nappi"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seuraavaKappaleNappi"
            android:text="@string/seuraava_kappale_nappi_teksti"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
