<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fi.alanurmonkoulu.alanurmonkoulu.TulostusOhjeKappale5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:text="@string/tulostus_ohje_teksti18"
                android:id="@+id/textView7"
                android:layout_below="@+id/imageView4"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"

                android:src="@drawable/netfabb_export_part_stl"
                android:id="@+id/imageView5"
                android:layout_below="@+id/textView7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:text="@string/tulostus_ohje_teksti16"
                android:id="@+id/textView8"
                android:layout_below="@+id/imageView5"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"

                android:src="@drawable/netfabb_tallennusruutu"
                android:id="@+id/imageView6"
                android:layout_below="@+id/textView8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:text="@string/tulostus_ohje_teksti17"
                android:id="@+id/textView9"
                android:layout_below="@+id/imageView6"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"

                android:src="@drawable/netfabb_poistuminen"
                android:id="@+id/imageView7"
                android:layout_below="@+id/textView9"
                android:paddingBottom="50dp"/>

            </RelativeLayout>

        </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edellinenKappaleNappi"
            android:text="@string/edellinen_kappale_nappi"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seuraavaKappaleNappi"
            android:text="@string/seuraava_kappale_nappi_teksti"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
